--- a/quiz.html
+++ b/quiz.html
@@ -7,8 +7,14 @@
     <link rel = "stylesheet" href = "quizStyle.css" >
 </head>
 <body>
-    <div class = "button"></div>
-    <div class = "button"></div>
-    <div class = "button"></div>
+    
+    <div class = "questionContainer">
+        <h1>Insert question here Insert question here Insert question here Insert question here</h1>
+    </div>
+    
+    <div class = "answerContainer">
+    <button class = "answer"></button>
+    <button class = "answer"></button>
+    </div>
 </body>
 </html>
