--- a/quiz.html
+++ b/quiz.html
@@ -9,12 +9,13 @@
 <body>
     
     <div class = "questionContainer">
-        <h1>Insert question here Insert question here Insert question here Insert question here</h1>
+        <h1>Who's the best Tutor?</h1>
     </div>
     
     <div class = "answerContainer">
-    <button class = "answer"></button>
-    <button class = "answer"></button>
+    <button class = "answer">Stroheimer</button>
+    <button class = "answer">Lars</button>
+    <button class = "answer">Matt</button>
     </div>
 </body>
 </html>
